# habits-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
client/: index.html  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  index.css
client/src/Auth/components/: Auth.tsx  AuthStartup.tsx  Login.tsx  Signup.tsx
client/src/Dashboard/components/: Dashboard.tsx
client/src/Habits/: types.ts
client/src/Habits/components/: EditHabitDialog.tsx  HabitsPage.tsx
client/src/Habits/hooks/: useWidgets.tsx
client/src/Layout/components/: Back.tsx  (+2 more)
client/src/Profile/: types.ts
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/Auth/: types.ts
frontend/src/Habits/: types.ts
frontend/src/Profile/: types.ts
frontend/src/services/: DataService.ts  Icons.ts  Icons.tsx  TargetsService.ts  mockdata.ts
frontend/src/store/: atoms.ts
frontend/src/types/: types.ts
frontend/src/utils/: getLoop.ts
server/: Cargo.toml  diesel.toml
server/src/: db_con.rs  main.rs  routes.rs
server/src/app/: habits.rs  mod.rs
server/src/middlewares/: auth.rs
server/src/models/: habits.rs  mod.rs  targets.rs  user.rs
server/src/repository/: habits.rs  mod.rs  targets.rs  users.rs
server/src/routes/: auth.rs  habits.rs  mod.rs  targets.rs  users.rs
server/src/services/: hashing.rs
src/: main.rs  models.rs  routes.rs  schema.rs
src/achievements/: models.rs  repository.rs  routes.rs
src/auth/: routes.rs
src/common/: mod.rs
src/common/middlewares/: auth.rs
src/common/models/: errors.rs
src/common/services/: crypto.rs  hashing.rs  mod.rs
src/features/: mod.rs
src/features/account/: handlers.rs  models.rs
src/features/achievement/: handlers.rs  models.rs
src/features/auth/: handlers.rs
src/features/category/: handlers.rs  models.rs
src/features/habit/: handlers.rs  models.rs
src/features/habit_target/: handlers.rs  models.rs
src/features/transaction/: handlers.rs  models.rs
src/features/user/: handlers.rs  models.rs
src/finance/: mod.rs  models.rs  repository.rs  routes.rs
src/habits/: models.rs  repository.rs  routes.rs
src/models/: auth.rs  habits.rs  mod.rs  targets.rs  user.rs
src/repository/: database.rs  habits.rs  targets.rs  users.rs
src/routes/: auth.rs  habits.rs  mod.rs  targets.rs  users.rs
src/services/: crypto.rs
src/targets/: models.rs  repository.rs  routes.rs
src/users/: repository.rs  routes.rs
supabase/: config.toml
supabase/migrations/: 20240414134011_users.sql  20240426112134_habits_achievements.sql  20240429094754_account_order.sql  20240501114821_category_order.sql  20240526122141_habits-redesign.sql  20240622124424_update_target_schema.sql  20240627072344_update_target_date_type.sql
(+81 files in other folders)
