[package]
name = "habits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "^4"
actix-cors = "0.6.4"
actix-identity = "0.5.2"
actix-web-httpauth = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
env_logger = "0.9.3"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.17"
validator = { version = "0.16.0", features = ["derive"] }
jsonwebtoken = "8.2.0"
pwhash = "1.0.0"


[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"]
