[package]
name = "habits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
env_logger = "0.9.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
diesel = { version = "2", features = ["mysql", "r2d2", "chrono"] }
r2d2 = "0.8"

[dependencies.uuid]
version = "1.2.2"
features = [
    "serde",
    "v4"
]

